fixed notes#